[gd_scene load_steps=24 format=2]

[ext_resource path="res://scenes/entities/units/infantry/head.obj" type="ArrayMesh" id=1]
[ext_resource path="res://scenes/entities/units/infantry/l_arm.obj" type="ArrayMesh" id=2]
[ext_resource path="res://scenes/entities/units/infantry/l_leg.obj" type="ArrayMesh" id=3]
[ext_resource path="res://scenes/entities/units/infantry/r_arm.obj" type="ArrayMesh" id=4]
[ext_resource path="res://scenes/entities/units/infantry/body.obj" type="ArrayMesh" id=5]
[ext_resource path="res://scenes/entities/units/infantry/r_leg.obj" type="ArrayMesh" id=6]
[ext_resource path="res://scenes/entities/units/infantry/skin_color_material.tres" type="Material" id=7]
[ext_resource path="res://scenes/entities/units/infantry/black_material.tres" type="Material" id=8]
[ext_resource path="res://scenes/entities/units/infantry/uniform.tres" type="Material" id=9]
[ext_resource path="res://scenes/entities/units/infantry/infantry.gd" type="Script" id=10]
[ext_resource path="res://addons/Godot-Touch-Input-Manager/input_detection.tscn" type="PackedScene" id=11]
[ext_resource path="res://addons/Godot-Touch-Input-Manager/InputManager.gd" type="Script" id=12]

[sub_resource type="Animation" id=5]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("pivot/legs/r:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("pivot/legs/l:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("pivot/body/r_arm:rotation_degrees")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("pivot/body/l_arm:rotation_degrees")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("pivot/body:translation")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("pivot/body:rotation_degrees")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ) ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("pivot/body/l_arm:translation")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( 0.164251, 0.132183, -0.040459 ) ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("pivot/body/r_arm:translation")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( -0.164, 0.132652, -0.04 ) ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("pivot/body/head:translation")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ) ]
}
tracks/9/type = "value"
tracks/9/path = NodePath("pivot/body/head:rotation_degrees")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ) ]
}
tracks/10/type = "value"
tracks/10/path = NodePath("pivot/legs:translation")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ) ]
}
tracks/11/type = "value"
tracks/11/path = NodePath("pivot/legs:rotation_degrees")
tracks/11/interp = 1
tracks/11/loop_wrap = true
tracks/11/imported = false
tracks/11/enabled = true
tracks/11/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ) ]
}
tracks/12/type = "value"
tracks/12/path = NodePath("pivot/legs/l:translation")
tracks/12/interp = 1
tracks/12/loop_wrap = true
tracks/12/imported = false
tracks/12/enabled = true
tracks/12/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( 0, -0.170669, 0 ) ]
}
tracks/13/type = "value"
tracks/13/path = NodePath("pivot/legs/r:translation")
tracks/13/interp = 1
tracks/13/loop_wrap = true
tracks/13/imported = false
tracks/13/enabled = true
tracks/13/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( 0, -0.170669, 0 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "iddle"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("pivot/legs:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("pivot/legs:translation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("pivot/body:translation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("pivot/body:rotation_degrees")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("pivot/body/l_arm:translation")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( 0.164251, 0.132183, -0.040459 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("pivot/body/l_arm:rotation_degrees")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ) ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("pivot/body/r_arm:translation")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( -0.164, 0.132652, -0.04 ) ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("pivot/body/r_arm:rotation_degrees")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ) ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("pivot/body/head:translation")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ) ]
}
tracks/9/type = "value"
tracks/9/path = NodePath("pivot/body/head:rotation_degrees")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ) ]
}
tracks/10/type = "value"
tracks/10/path = NodePath("pivot/legs/l:translation")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( 0, -0.170669, 0 ) ]
}
tracks/11/type = "value"
tracks/11/path = NodePath("pivot/legs/l:rotation_degrees")
tracks/11/interp = 1
tracks/11/loop_wrap = true
tracks/11/imported = false
tracks/11/enabled = true
tracks/11/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ) ]
}
tracks/12/type = "value"
tracks/12/path = NodePath("pivot/legs/r:translation")
tracks/12/interp = 1
tracks/12/loop_wrap = true
tracks/12/imported = false
tracks/12/enabled = true
tracks/12/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( 0, -0.170669, 0 ) ]
}
tracks/13/type = "value"
tracks/13/path = NodePath("pivot/legs/r:rotation_degrees")
tracks/13/interp = 1
tracks/13/loop_wrap = true
tracks/13/imported = false
tracks/13/enabled = true
tracks/13/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ) ]
}

[sub_resource type="Animation" id=6]
resource_name = "run_unarm"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("pivot/legs:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("pivot/legs:translation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("pivot/body:translation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("pivot/body:rotation_degrees")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("pivot/body/l_arm:translation")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( 0.164251, 0.132183, -0.040459 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("pivot/body/l_arm:rotation_degrees")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 0.2, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ), Vector3( 37.178, 0, 0 ), Vector3( -42.1905, 0, 0 ) ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("pivot/body/r_arm:translation")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( -0.164, 0.132652, -0.04 ) ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("pivot/body/r_arm:rotation_degrees")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0, 0.2, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ), Vector3( -36.346, 0, 0 ), Vector3( 38.9345, 0, 0 ) ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("pivot/body/head:translation")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ) ]
}
tracks/9/type = "value"
tracks/9/path = NodePath("pivot/body/head:rotation_degrees")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ) ]
}
tracks/10/type = "value"
tracks/10/path = NodePath("pivot/legs/l:translation")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( 0, -0.170669, 0 ) ]
}
tracks/11/type = "value"
tracks/11/path = NodePath("pivot/legs/l:rotation_degrees")
tracks/11/interp = 1
tracks/11/loop_wrap = true
tracks/11/imported = false
tracks/11/enabled = true
tracks/11/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.4, 0.5, 0.6, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector3( 60.5875, 0, 0 ), Vector3( 29.2915, 0, 0 ), Vector3( -24.7985, 0, 0 ), Vector3( -60.6735, 0, 0 ), Vector3( -19.6875, 0, 0 ), Vector3( -6.34348, 0, 0 ), Vector3( 38.2772, 0, 0 ) ]
}
tracks/12/type = "value"
tracks/12/path = NodePath("pivot/legs/r:translation")
tracks/12/interp = 1
tracks/12/loop_wrap = true
tracks/12/imported = false
tracks/12/enabled = true
tracks/12/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( 0, -0.170669, 0 ) ]
}
tracks/13/type = "value"
tracks/13/path = NodePath("pivot/legs/r:rotation_degrees")
tracks/13/interp = 1
tracks/13/loop_wrap = true
tracks/13/imported = false
tracks/13/enabled = true
tracks/13/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.4, 0.5, 0.6, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector3( -28.0436, 0, 0 ), Vector3( -1.27765, 0, 0 ), Vector3( 10.2844, 0, 0 ), Vector3( 35.7824, 0, 0 ), Vector3( 49.6663, 0, 0 ), Vector3( 73.2173, 0, 0 ), Vector3( -56.57, 0, 0 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "t_pos"
tracks/0/type = "value"
tracks/0/path = NodePath("pivot/legs:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("pivot/legs:translation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("pivot/body:translation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("pivot/body:rotation_degrees")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("pivot/body/l_arm:translation")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( 0.164251, 0.132183, -0.040459 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("pivot/body/l_arm:rotation_degrees")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 36.056 ) ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("pivot/body/r_arm:translation")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( -0.164, 0.132652, -0.04 ) ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("pivot/body/r_arm:rotation_degrees")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( 0, 0, -39.41 ) ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("pivot/body/head:translation")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ) ]
}
tracks/9/type = "value"
tracks/9/path = NodePath("pivot/body/head:rotation_degrees")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ) ]
}
tracks/10/type = "value"
tracks/10/path = NodePath("pivot/legs/l:translation")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( 0, -0.170669, 0 ) ]
}
tracks/11/type = "value"
tracks/11/path = NodePath("pivot/legs/l:rotation_degrees")
tracks/11/interp = 1
tracks/11/loop_wrap = true
tracks/11/imported = false
tracks/11/enabled = true
tracks/11/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 16.529 ) ]
}
tracks/12/type = "value"
tracks/12/path = NodePath("pivot/legs/r:translation")
tracks/12/interp = 1
tracks/12/loop_wrap = true
tracks/12/imported = false
tracks/12/enabled = true
tracks/12/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( 0, -0.170669, 0 ) ]
}
tracks/13/type = "value"
tracks/13/path = NodePath("pivot/legs/r:rotation_degrees")
tracks/13/interp = 1
tracks/13/loop_wrap = true
tracks/13/imported = false
tracks/13/enabled = true
tracks/13/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( 0, 0, -26.244 ) ]
}

[sub_resource type="AnimationNodeAnimation" id=7]
animation = "iddle"

[sub_resource type="AnimationNodeAnimation" id=8]
animation = "run_unarm"

[sub_resource type="AnimationNodeStateMachineTransition" id=9]

[sub_resource type="AnimationNodeStateMachineTransition" id=10]

[sub_resource type="AnimationNodeStateMachine" id=1]
states/iddle/node = SubResource( 7 )
states/iddle/position = Vector2( 72, 55 )
states/run_unarm/node = SubResource( 8 )
states/run_unarm/position = Vector2( 473, 55 )
transitions = [ "iddle", "run_unarm", SubResource( 9 ), "run_unarm", "iddle", SubResource( 10 ) ]
start_node = "iddle"

[sub_resource type="AnimationNodeStateMachinePlayback" id=2]

[sub_resource type="CapsuleShape" id=11]
radius = 0.523498
height = 0.42185

[node name="infantry" type="Spatial"]
script = ExtResource( 10 )
speed = 2.0

[node name="pivot" type="Spatial" parent="."]
transform = Transform( -1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 0.578656, 0 )

[node name="body" type="Spatial" parent="pivot"]

[node name="Body" type="MeshInstance" parent="pivot/body"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.00439346, -1.19209e-07, 0.0357322 )
mesh = ExtResource( 5 )
skeleton = NodePath("../../..")
material/0 = ExtResource( 9 )

[node name="l_arm" type="Spatial" parent="pivot/body"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.164251, 0.132183, -0.040459 )

[node name="a" type="MeshInstance" parent="pivot/body/l_arm"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.167315, -0.132501, 0.034216 )
mesh = ExtResource( 2 )
skeleton = NodePath("../../../..")
material/0 = ExtResource( 7 )
material/1 = ExtResource( 9 )

[node name="r_arm" type="Spatial" parent="pivot/body"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.164, 0.132652, -0.04 )

[node name="a" type="MeshInstance" parent="pivot/body/r_arm"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.179891, -0.130803, 0.0447637 )
mesh = ExtResource( 4 )
skeleton = NodePath("../../../..")
material/0 = ExtResource( 7 )
material/1 = ExtResource( 9 )

[node name="head" type="Spatial" parent="pivot/body"]

[node name="h" type="MeshInstance" parent="pivot/body/head"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.00193334, -1.19209e-07, 0.0174155 )
mesh = ExtResource( 1 )
skeleton = NodePath("../../../..")
material/0 = ExtResource( 7 )
material/1 = ExtResource( 8 )

[node name="legs" type="Spatial" parent="pivot"]

[node name="l" type="Spatial" parent="pivot/legs"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.170669, 0 )

[node name="leg" type="MeshInstance" parent="pivot/legs/l"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.00702339, 0.173399, 0.030491 )
mesh = ExtResource( 3 )
skeleton = NodePath("../../../..")
material/0 = ExtResource( 9 )
material/1 = ExtResource( 8 )

[node name="r" type="Spatial" parent="pivot/legs"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.170669, 0 )

[node name="leg" type="MeshInstance" parent="pivot/legs/r"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.00702339, 0.173399, 0.030491 )
mesh = ExtResource( 6 )
skeleton = NodePath("../../../..")
material/0 = ExtResource( 9 )
material/1 = ExtResource( 8 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 5 )
anims/iddle = SubResource( 4 )
anims/run_unarm = SubResource( 6 )
anims/t_pos = SubResource( 3 )

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource( 1 )
anim_player = NodePath("../AnimationPlayer")
active = true
parameters/playback = SubResource( 2 )

[node name="input_detection" type="Node" parent="." instance=ExtResource( 11 )]
script = ExtResource( 12 )

[node name="Area" type="Area" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.578656, 0 )
collision_layer = 4
collision_mask = 0
monitorable = false

[node name="CollisionShape" type="CollisionShape" parent="Area"]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0 )
shape = SubResource( 11 )

[connection signal="any_gesture" from="input_detection" to="." method="_on_input_detection_any_gesture"]
